2008-10-02  Stephen Deasey <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/connio.c:
	* nsd/sock.c: Ns_SockSendBufs now handles buffer shuffling for
	UIO_MAXIOV. Ns_ConnSend now much simpler. Use Ns_SetVec and new
	Ns_ResetVec for clarity.

2008-10-01  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c:
	* nssock/nssock.c: Convert the Ns_DriverProc callback into
	5 individual callbacks: Ns_DriverRecvProc, Ns_DriverSendProc,
	Ns_DriverSendFileProc, Ns_DriverKeepProc, and Ns_DriverCloseProc.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c:
	* nssock/nssock.c: Add new Ns_DriverListenProc callback which is
	reponsible for opening the listening driver socket at
	server startup.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c:
	* nssock/nssock.c: Add new Ns_DriverAcceptProc callback which is
	responsible for accepting incoming socket connections from the
	driver listen socket.

	It can opperate in two modes: in the first it accepts and returns
	the new socket (same as before), in the second it tells the driver
	thread it believes data is ready to be read from the socket.
	In this case the driver thread will skip pushing the socket onto
	the read queue and attempt the read immediately. This saves a trip
	throught the poll loop.

	The second mode could be used by UDP sockets where there is no
	accept phase.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/driver.c: Remove the NS_DRIVER_* options and the code that
	handles them. Should be possible to achieve the same effect with
	the new driver callbacks.

	* nsd/conn.c:
	* nsd/queue.c:
	* nsd/return.c:
	* tests/ns_conn.test: Remove the weird responseVersion string.
	Although it's called 'version' it actually includes the "HTTP/"
	string, which is surprising when it is being nulled with a literal 0...

	* nsd/request.c: Remove the weird protocol-agnostic
	versionstring and it's parsing. The confusion doesn't seem
	worth it.

	* nsd/driver.c:
	* tests/all.tcl: